# caolo-bevy-client

./: .gitattributes  Cargo.toml
assets/blender/: structures.blend
assets/meshes/: structures.glb
assets/shaders/: bot.frag  mining_laser.frag  mining_laser.vert  resource.frag  structure.frag  terrain.frag  terrain.vert
src/: account.rs  bots.rs  camera_control.rs  cao_entities.rs  cao_lang_client.rs  cao_lang_editor.rs  cao_sim_client.rs  caolang.rs  caosim.rs  main.rs  main_menu.rs  mining.rs  resources.rs  room_interaction.rs  room_ui.rs  structures.rs  terrain.rs
src/account/: account_model.rs
src/bots/: assets.rs  bot_assets.rs
src/cao_lang_client/: cao_lang_model.rs  caolang_model.rs
src/cao_lang_editor/: card_ui.rs  card_widget.rs  lane_widget.rs
src/cao_sim_client/: cao_client.rs  cao_sim_model.rs  terrain_model.rs
src/caosim/: bot_fragment.glsl  bots.rs  cao_sim_model.rs  room.rs  sim.rs  terrain.rs  terrain_fragment.glsl  terrain_model.rs  terrain_vertex.glsl
src/resources/: resource_assets.rs
src/structures/: structure_assets.rs
src/terrain/: terrain_assets.rs
