[package]
name = "caolo"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.5"
bevy_egui = "0.6"
cao-lang = { version = "0.1" }
cao-math = { git = "https://github.com/caolo-game/cao-math.git" }
surf = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
crossbeam = "*"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
async-tungstenite = { version = "0.13", features = [
    "tokio-runtime",
    "tokio-native-tls"
] }
tungstenite = { version = "0.13" }
futures = "0.3"
futures-lite = "1"
fastrand = "1.4"
thiserror = "1"
anyhow = "1"
smallvec = "1"
lru = "0.6"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
