[package]
name = "caolo"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.5.0"
bevy_egui = "0.7.1"
cao-lang = "0.1.39"
cao-math = { git = "https://github.com/caolo-game/cao-math.git" }
surf = "2.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = { version = "0.1.29", features = ["release_max_level_warn"] }
crossbeam = "0.8.1"
tokio = { version = "1.12.0", features = ["sync", "rt-multi-thread", "time"] }
async-tungstenite = { version = "0.15.0", features = [
    "tokio-runtime",
    "tokio-native-tls"
] }
tungstenite = "0.15.0"
futures = "0.3.17"
futures-lite = "1.12.0"
fastrand = "1.5.0"
thiserror = "1.0.30"
anyhow = "1.0.44"
smallvec = "1.7.0"
lru = "0.7.0"
ezing = "0.2.1"
serde-hashkey = { version = "0.4.0", features = ["ordered-float"] }

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
